intento de update a github pages

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Guia de estilos para el Sistema Integral de Informacion"
+      content="Guia de estilos para el Sistema Integral de Informacion."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
